@@ -7,8 +7,9 @@ hw-detect (1.23) UNRELEASED; urgency=low
   * Move explicit ide-core load to before hardware autodetection, to
     avoid ugly message in the log and to allow module parameters to really be
     passed for it.
+  * Run update-dev from userdevfs at end to allow it to create device nodes.
 
- -- Joey Hess <joeyh@debian.org>  Fri,  5 Aug 2005 18:22:25 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 17 Aug 2005 09:25:56 -0400
 
 hw-detect (1.22) unstable; urgency=low
 
